@@ -4,7 +4,7 @@
 	 name="awele"
 	 type="awele"
 	 section="/strategy"
-	 difficulty="2"
+	 difficulty="0"
 	 icon="boardicons/awele.png"
 	 author="Frédéric Mazzarol"
 	 boarddir="awele">
